# datastor_utils

./: CMakeLists.txt  README.md  install_output.sh
algo/: algo.cpp  algo.h  algo_aio_device.cpp  algo_aio_device.h  algo_bitmap.cpp  algo_bitmap.h  algo_bitmaps.cpp  algo_bitmaps.h  algo_block_io_jbod.cpp  algo_block_io_jbod.h  algo_block_io_jbod_nosuper.cpp  algo_block_io_jbod_nosuper.h  algo_block_io_super.cpp  algo_block_io_super.h  algo_block_multi_super.cpp  algo_block_multi_super.h  algo_block_open_ref.cpp  algo_block_open_ref.h  algo_error.h  algo_interface.cpp  algo_interface.h  algo_nocopy_request_mapper.cpp  algo_nocopy_request_mapper.h  algo_range.cpp  algo_range.h  algo_section.cpp  algo_section.h  algo_sections.cpp  algo_sections.h  block_request.cpp  block_request.h  debug.cpp  debug.h  libaio_device.cpp  libaio_device.h  libaio_device_server.cpp  libaio_device_server.h  psync_device.cpp  psync_device.h  psync_service.cpp  (+10 more)
conf/: .gitignore  CMakeLists.txt  awe_conf_error.h  awe_env.conf  conf  generate_profile.sh  install.sh  readme.txt  ss_conf_error.h
conf/awe-conf/conf/: awe_algo.conf  awe_log.conf  example.conf
conf/awe_conf/: env.cpp  env.h
conf/env/: env.cpp
conf/lib/: env.py
conf/yunke_serversan/conf/: ss-admin.conf  ss-cluster.conf  ss-log.conf  ss-metadata.conf  ss-nbd.conf
conf/yunke_serversan/xml/: ss-cluster-admin.xml  ss-cluster-communicate.xml  ss-cluster-nodes.xml  ss-metadata-admin.xml  ss_disks_local.xml
data/: CMakeLists.txt  clean.sh  lt_data_error.h
data/data/: lt_data_t.h
data/json/: json_obj.cpp  json_obj.h  test_json.cpp
data/lt_data/: json_obj.cpp  json_obj.h  lt_data_t.h  lt_mempool.h  lt_stack.h  ref_obj.cpp  ref_obj.h
functions/: CMakeLists.txt  lt_function_error.h  test_functions.cpp
functions/base64/: base64.cpp  base64.h
functions/checksum/: MD5.cpp  MD5.h  data_checksum.cpp  data_checksum.h
functions/communicate/: action_stub.cpp  action_stub.h  lt_async_2safe_async.cpp  lt_async_2safe_async.h  lt_bidirectional_map.hpp  lt_client_service.cpp  lt_client_service.h  lt_condition.h  lt_data_translator.h  lt_reference.cpp  lt_reference.h  lt_safe_state.hpp  lt_server_service.cpp  lt_server_service.h  lt_session.cpp  lt_session.h  lt_session_cli.cpp  lt_session_cli.h  lt_session_cli_safe.cpp  lt_session_cli_safe.h  lt_session_cli_set.cpp  lt_session_cli_set.h  lt_session_dog.cpp  lt_session_dog.h  lt_session_serv.cpp  lt_session_serv.h  lt_thread_server.cpp  lt_thread_server.h  lt_watch_dog.cpp  lt_watch_dog.h  safe_voidp_map.cpp  safe_voidp_map.h
functions/lt_function/: lt_safe_set.h  stronger_cond.h  utils.cpp  utils.h
functions/thread_pool/: thread_pool.hpp
functions/utils/: utils.cpp  utils.h
log/: CMakeLists.txt  main.cpp  ss_log_error.h
log/include/: awe_log.h  ss_log.h
log/include/log4cpp/: AppendersFactory.hh  BufferingAppender.hh  LayoutsFactory.hh  Makefile  Priority.hh  TriggeringEventEvaluatorFactory.hh  ss_log4cpp.h
log/include/log4cpp/threading/: Makefile
log/src/: awe_log.cpp  ss_log.cpp  ss_log4cpp.cpp  ss_logger.cpp  ss_logger.h
log/src/log4cpp_src/: Appender.cpp  AppendersFactory.cpp  BufferingAppender.cpp  LayoutsFactory.cpp  LevelEvaluator.cpp  NTEventLogAppender.cpp  PatternLayout.cpp  Priority.cpp  PropertyConfiguratorImpl.cpp  SimpleLayout.cpp  TriggeringEventEvaluatorFactory.cpp
raid/: common.py  err.py  raid.py  raid_manager.py  storage.py  vg.py
ut/: CMakeLists.txt
ut/algo/: CMakeLists.txt  test_algo.cpp
ut/algo/conf/: update_html.sh
ut/communicate/: CMakeLists.txt  test_comm.cpp  test_commserver.cpp
ut/communicate/conf/: test_comm.xml  test_comm_async.xml  test_comm_sync.xml  testclient.cpp  testclient.h  testclient_internal.cpp  testclient_internal.h  testserver.cpp  testserver.h  update_api.sh
ut/lt_data/: CMakeLists.txt  test_data.cpp
ut/test_aio/: CMakeLists.txt  aio_test.cpp
